--- a/src/main/resources/fr/amu/iut/cc3/toile.fxml
+++ b/src/main/resources/fr/amu/iut/cc3/toile.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
-<HBox id="scene" prefHeight="430.0" prefWidth="850.0" spacing="20.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" styleClass="root">
+<HBox id="scene" prefHeight="430.0" prefWidth="850.0" spacing="20.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" styleClass="root" fx:controller="fr.amu.iut.cc3.ToileController">
     <Pane prefHeight="400.0" prefWidth="400.0">
         <Circle centerX="200.0" centerY="200.0" radius="200.0" styleClass="toile"/>
         <Circle centerX="200.0" centerY="200.0" radius="150.0" styleClass="toile"/>
@@ -36,22 +36,22 @@
     </Pane>
     <GridPane alignment="CENTER" hgap="10" vgap="20">
         <Label text="Compétence 1 - Réaliser" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-        <TextField fx:id="C1" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+        <TextField fx:id="comp1" GridPane.columnIndex="1" GridPane.rowIndex="0" onAction="#onClickcomp1"/>
 
         <Label text="Compétence 2 - Optimiser" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-        <TextField fx:id="C2" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <TextField fx:id="comp2" GridPane.columnIndex="1" GridPane.rowIndex="1" onAction="#onClickcomp2"/>
 
         <Label text="Compétence 3 - Administrer" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-        <TextField fx:id="C3" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+        <TextField fx:id="comp3" GridPane.columnIndex="1" GridPane.rowIndex="2" onAction="#onClickcomp3"/>
 
         <Label text="Compétence 4 - Gérer" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-        <TextField fx:id="C4" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+        <TextField fx:id="comp4" GridPane.columnIndex="1" GridPane.rowIndex="3" onAction="#onClickcomp4"/>
 
         <Label text="Compétence 5 - Conduire" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-        <TextField fx:id="C5" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+        <TextField fx:id="comp5" GridPane.columnIndex="1" GridPane.rowIndex="4" onAction="#onClickcomp5"/>
 
         <Label text="Compétence 6 - Collaborer" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-        <TextField fx:id="C6" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+        <TextField fx:id="comp6" GridPane.columnIndex="1" GridPane.rowIndex="5" onAction="#onClickcomp6"/>
 
         <HBox spacing="20" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="10" alignment="BOTTOM_RIGHT">
             <Button fx:id="okBtn" text="Tracer"/>
